src/test/compile-fail/swap-no-lval.rs
fn main() {
    5 <-> 3;
    //~^ ERROR swapping to and from non-lvalue
    //~^^ ERROR swapping to and from non-lvalue
}
